<?xml version="1.0"?>
<package format="2">
    <name>nturt_can_parser</name>
    <version>0.0.0</version>
    <description>CAN message parser</description>
    <maintainer email="jet22854111@gmail.com">QuantumSpawner</maintainer>
    <author email="jet22854111@gmail.com">QuantumSpawner</author>
    <author email="queeniiee02@gmail.com">LY</author>
    <author email="tw88712@gmail.com">TieneSabor</author>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>can_msgs</build_depend>
    <build_depend>nturt_ros_interface</build_depend>
    <build_depend>roscpp</build_depend>

    <!-- execute dependencies -->
    <exec_depend>can_msgs</exec_depend>
    <exec_depend>nturt_ros_interface</exec_depend>
    <exec_depend>roscpp</exec_depend>
</package>
